--- a/app/views/items/_search-item-box.html.haml
+++ b/app/views/items/_search-item-box.html.haml
@@ -1,4 +1,4 @@
-- @search_data.each do |items|
+- @search_result.each do |items|
   .search__content-item-box
     = link_to "/items" ,class: "pickup-content__title-link" do
       = image_tag("m90055501397_1.jpg", alt: "商品", class: "search__content-item-box-photo")
