Feat: 商品購入機能の追加
Gem payjpを使用したクレジットカード決済機能、商品購入機能の追加。

--- a/app/assets/stylesheets/items/buy.scss
+++ b/app/assets/stylesheets/items/buy.scss
@@ -74,6 +74,17 @@
         line-height: 1.5;
         font-size: 14px;
       }
+      #payjp_checkout_box input[type=button] {
+        display: block;
+        width: 100%;
+        text-align: center;
+        line-height: 48px;
+        font-size: 14px;
+        margin: 16px 0 0;
+        color: $white;
+        background-color: $mercariRed;
+        border: 1px solid #888;
+      }
       &__send-btn {
         display: block;
         width: 100%;
