Refactor: 配送先の表示を変数化
商品購入時に表示される配送先の情報をログインしているユーザの住所が表示されるように、変数を用いた記述に変更。
必要なアソシエーションを定義。

--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -17,7 +17,6 @@
           %p.buy-content-inner__pay-price-leftbox 支払い金額
           %p.buy-content-inner__pay-price-rightbox
             = "¥#{@item.price}"
-        %p.buy-content-inner__alert 配送先と支払い方法の入力を完了してください。
         = form_tag(action: :pay, method: :post) do
           %script.payjp-button{ src: "https://checkout.pay.jp", type: "text/javascript", "data-text": "購入する", "data-submit-text": "購入する", "data-key": ENV["PAYJP_PUBLIC_KEY"]}
 
@@ -26,12 +25,12 @@
         .buy-user-info-inner__address
           %h3 配送先
           .buy-user-info-inner__address-text
-            〒000-0000
+            = "〒#{current_user.address.postcode}"
             %br
-            東京都 杉並区 00000
+            = "#{current_user.address.prefecture.name} #{current_user.address.city} #{current_user.address.address} #{current_user.address.building_name}"
             %br
-            山田 太郎
-          = link_to '変更する', "/items" ,class: "buy-user-info-inner__address-change" ,method: :get
+            = "#{current_user.last_name} #{current_user.first_name}"
+          = link_to '変更する', "#" ,class: "buy-user-info-inner__address-change" ,method: :get
       .buy-user-info-inner
         .buy-user-info-inner__pay-fix
           %h3 支払い方法
