--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -7,34 +7,7 @@
         = fa_icon 'search'
   .header-bottom
     .header-bottom--left
-      %ul.pc-header-nav
-        %li
-          %h2
-            = link_to "カテゴリーから探す", "/items",class: "pc-header-nav-root"
-          %ul.pc-header-nav__parent-wrap
-            %li.pc-header-nav__parent
-              %h3
-                = link_to "レディース", "/items" ,class: "header-bottom--left__nav-link-item"
-              %ul.pc-header-nav__child-wrap
-                %li.pc-header-nav__child
-                  %h4
-                    = link_to "トップスアウター","/items" ,class: "header-bottom--left__nav-link-item"
-                  %ul.pc-header-nav__grand-child-wrap
-                    %li.pc-header-nav__grand-child
-                      = link_to "トップスカットソー", "/items" ,class: "header-bottom--left__nav-link-item"
-                    %li.pc-header-nav__grand-child
-                      = link_to "ブラウス", "/items" ,class: "header-bottom--left__nav-link-item"
-                %li.pc-header-nav__child
-                  %h4
-                    = link_to "ジャケットアウター", "/items" ,class: "header-bottom--left__nav-link-item"
-                  %ul.pc-header-nav__grand-child-wrap
-                    %li.pc-header-nav__grand-child
-                      = link_to "仮テキスト", "/items" ,class: "header-bottom--left__nav-link-item"
-                    %li.pc-header-nav__grand-child
-                      = link_to "仮テキスト", "/items" ,class: "header-bottom--left__nav-link-item"
-        %li
-          %h3.header-bottom--left
-            = link_to "ブランドから探す", "/items" ,class: "header-bottom--left__nav-brand"
+      =render partial: 'items/ddmenu', locals: {categorys: @categorys, brands: @brands}
     .header-bottom--right
       %ul.bottom--right__nav
         - if user_signed_in?
