--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,7 +1,9 @@
 / ここからヘッダーですープルリクエスト前に削除
 = render "items/header"
-
-= render "share/bread-crumps"
+.bread-crumps
+  .bread-crumps__item
+    - breadcrumb :product
+    = breadcrumbs separator: " &rsaquo; "
 
 / ここからメインエリアですプルリクエスト前に削除
 
