--- a/app/views/items/_itembox.html.haml
+++ b/app/views/items/_itembox.html.haml
@@ -1,5 +1,5 @@
 .pickup-content-items-box
-  = link_to "/items" ,class: "pickup-content__title-link" do
+  = link_to "/items/show" ,class: "pickup-content__title-link" do
     -# 画像の変数化は保留
     = image_tag("m90055501397_1.jpg", alt: "商品", class: "pickup-content-items-box__img")
     .pickup-content-items-box-body
