--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -56,7 +56,7 @@
       .item-price-box__price ¥ 3,380
       .item-price-box__tax (税込)
       .item-price-box__shipping 送料込み
-    = link_to '購入画面に進む', "/items" ,class: "item-buy-btn" ,method: :get
+    = link_to '購入画面に進む', "/items/buy" ,class: "item-buy-btn" ,method: :get
     .item-description
       %p.item-description__inner
         ■商品ご覧頂き、誠にありがとうございます。
