--- a/app/views/items/sell.html.haml
+++ b/app/views/items/sell.html.haml
@@ -1,132 +1,130 @@
 .all-container
   = render 'devise/registrations/header'
-  = form_for @item, url: {:action => :create} do |f|
-    = fields_for(@image) do |image|
-      = image.file_field :image
-    .sell-body
-      .sell-body__title
-        商品情報の入力
-      .sell-body-picture
-        .sell-body-picture-header
-          .sell-body-picture-header__title
-            出品画像
-          .sell-body-picture-header__mark
-            必須
-          .sell-body-picture-header__text
-            最大4枚までアップできます
-        .sell-body-picture-body
-          -# = fields_for(@image) do |image|
-          -#   = image.file_field :image
-              #file_drop_area.sell-body-picture-body-upload-box
-                %input.sell-body-picture-body-upload-box__picture
-                %pre.sell-body-picture-body-upload-box__text
-                  ドラッグアンドドロップ
-                  またはクリックしてファイルをアップロード
-      .sell-body-information
-        .sell-body-information-content
-          .sell-body-information-content__name
-            商品名
-          .sell-body-information-content__mark
-            必須
-        %input{class: "sell-body-information__input",placeholder: "商品名(必須40文字まで)"}
-        .sell-body-information-content
-          .sell-body-information-content__name
-            商品の説明
-          .sell-body-information-content__mark
-            必須
-        %textarea{class: "sell-body-information__textarea",placeholder: "商品の説明(必須1,000文字以内) (色、素材、重さ、定価、注意点など) 例) 2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。合わせやすいのでおすすめです。"}
+  -# = form_for @item, url: {:action => :create} do |f|
+  -#   .sell-body
+  -#     .sell-body__title
+  -#       商品情報の入力
+  -#     .sell-body-picture
+  -#       .sell-body-picture-header
+  -#         .sell-body-picture-header__title
+  -#           出品画像
+  -#         .sell-body-picture-header__mark
+  -#           必須
+  -#         .sell-body-picture-header__text
+  -#           最大4枚までアップできます
+  -#       .sell-body-picture-body
+  -#         -# = fields_for(@image) do |image|
+  -#         -#   = image.file_field :image
+  -#             #file_drop_area.sell-body-picture-body-upload-box
+  -#               %input.sell-body-picture-body-upload-box__picture
+  -#               %pre.sell-body-picture-body-upload-box__text
+  -#                 ドラッグアンドドロップ
+  -#                 またはクリックしてファイルをアップロード
+  -#     .sell-body-information
+  -#       .sell-body-information-content
+  -#         .sell-body-information-content__name
+  -#           商品名
+  -#         .sell-body-information-content__mark
+  -#           必須
+  -#       %input{class: "sell-body-information__input",placeholder: "商品名(必須40文字まで)"}
+  -#       .sell-body-information-content
+  -#         .sell-body-information-content__name
+  -#           商品の説明
+  -#         .sell-body-information-content__mark
+  -#           必須
+  -#       %textarea{class: "sell-body-information__textarea",placeholder: "商品の説明(必須1,000文字以内) (色、素材、重さ、定価、注意点など) 例) 2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。合わせやすいのでおすすめです。"}
 
-      .sell-body-detail
-        .sell-body-detail__title
-          商品の詳細
-        .sell-body-detail-contents
-          .sell-body-detail-contents__category
-            .sell-body-detail-contents__category__name
-              カテゴリー
-            .sell-body-detail-contents__category__mark
-              必須
-          = f.collection_select :category_id, Category.all, :id, :name, {}, {class: 'wide-categories__input'}
-          .sell-body-detail-contents__states
-            .sell-body-detail-contents__states__name
-              商品の状態
-            .sell-body-detail-contents__states__mark
-              必須
-          %select.dummy__input2
+  -#     .sell-body-detail
+  -#       .sell-body-detail__title
+  -#         商品の詳細
+  -#       .sell-body-detail-contents
+  -#         .sell-body-detail-contents__category
+  -#           .sell-body-detail-contents__category__name
+  -#             カテゴリー
+  -#           .sell-body-detail-contents__category__mark
+  -#             必須
+  -#         = f.collection_select :category_id, Category.all, :id, :name, {}, {class: 'wide-categories__input'}
+  -#         .sell-body-detail-contents__states
+  -#           .sell-body-detail-contents__states__name
+  -#             商品の状態
+  -#           .sell-body-detail-contents__states__mark
+  -#             必須
+  -#         %select.dummy__input2
 
-      .sell-body-delivery
-        .sell-body-delivery-header
-          .sell-body-delivery-header__title
-            発送について
-            = fa_icon 'question-circle', class: "sell-body-delivery-header__question-circle"
-        .sell-body-delivery-contents
-          .sell-body-delivery-contents__burden
-            .sell-body-delivery-contents__burden-notice
-              .sell-body-delivery-contents__burden-notice__name
-                配送料の負担
-              .sell-body-delivery-contents__burden-notice__mark
-                必須
-            %select.dummy__input3
-          .sell-body-delivery-contents__method
-            .sell-body-delivery-contents__method-notice
-              .sell-body-delivery-contents__method-notice__name
-                配送の方法
-              .sell-body-delivery-contents__method-notice__mark
-                必須
-            %select.dummy__input4
-          .sell-body-delivery-contents__region
-            .sell-body-delivery-contents__region-notice
-              .sell-body-delivery-contents__region-notice__name
-                配送元の地域
-              .sell-body-delivery-contents__region-notice__mark
-                必須
-            = f.collection_select :prefecture, Prefecture.all, :id, :name, {}, {class: "sell-body-delivery-contents__region-select"}
-          .sell-body-delivery-contents__days
-            .sell-body-delivery-contents__days-notice
-              .sell-body-delivery-contents__days-notice__name
-                配送までの日数
-              .sell-body-delivery-contents__days-notice__mark
-                必須
-            %select.dummy__input5
+  -#     .sell-body-delivery
+  -#       .sell-body-delivery-header
+  -#         .sell-body-delivery-header__title
+  -#           発送について
+  -#           = fa_icon 'question-circle', class: "sell-body-delivery-header__question-circle"
+  -#       .sell-body-delivery-contents
+  -#         .sell-body-delivery-contents__burden
+  -#           .sell-body-delivery-contents__burden-notice
+  -#             .sell-body-delivery-contents__burden-notice__name
+  -#               配送料の負担
+  -#             .sell-body-delivery-contents__burden-notice__mark
+  -#               必須
+  -#           %select.dummy__input3
+  -#         .sell-body-delivery-contents__method
+  -#           .sell-body-delivery-contents__method-notice
+  -#             .sell-body-delivery-contents__method-notice__name
+  -#               配送の方法
+  -#             .sell-body-delivery-contents__method-notice__mark
+  -#               必須
+  -#           %select.dummy__input4
+  -#         .sell-body-delivery-contents__region
+  -#           .sell-body-delivery-contents__region-notice
+  -#             .sell-body-delivery-contents__region-notice__name
+  -#               配送元の地域
+  -#             .sell-body-delivery-contents__region-notice__mark
+  -#               必須
+  -#           = f.collection_select :prefecture, Prefecture.all, :id, :name, {}, {class: "sell-body-delivery-contents__region-select"}
+  -#         .sell-body-delivery-contents__days
+  -#           .sell-body-delivery-contents__days-notice
+  -#             .sell-body-delivery-contents__days-notice__name
+  -#               配送までの日数
+  -#             .sell-body-delivery-contents__days-notice__mark
+  -#               必須
+  -#           %select.dummy__input5
 
-      .sell-body-price
-        .sell-body-price-side
-          .sell-body-price-side__title
-            販売価格(300〜9,999,999)
-            = fa_icon 'question-circle', class: "sell-body-price-side__question-circle"
-        .sell-body-price-main
-          .sell-body-price-main-input
-            .sell-body-price-main-input__box
-              .sell-body-price-main-input__box__name
-                価格
-              .sell-body-price-main-input__box__mark
-                必須
-              %input{class: "sell-body-price-main-input__box__yen", placeholder: "例)300"}
-              .sell-body-price-main-input__box__yen-mark
-                ￥
-          .sell-body-price-main-commission
-            .sell-body-price-main-commission__box
-              .sell-body-price-main-commission__box__name
-                販売手数料(10%)
-              .sell-body-price-main-commission__box__ans
-                ー
-          .sell-body-price-main-profit
-            .sell-body-price-main-profit__box
-              .sell-body-price-main-profit__box__name
-                販売利益
-              .sell-body-price-main-profit__box__ans
-                ー
-      .sell-body-exhibit
-        %p.sell-body-exhibit__caution
-          #{link_to "禁止されている出品", "#",class: "sell-body-exhibit__caution-link"}、#{link_to "行為", "#",class: "sell-body-exhibit__caution-link"}を必ずご確認ください。
-        %p.sell-body-exhibit__caution
-          またブランド品でシリアルナンバー等がある場合はご記載ください。#{link_to "偽ブランドの販売", "#",class: "sell-body-exhibit__caution-link"}
-        %p.sell-body-exhibit__caution
-          は犯罪であり処罰される可能性があります。
-        %p.sell-body-exhibit__caution
-          また、出品をもちまして#{link_to "加盟店規約", "#",class: "sell-body-exhibit__caution-link"}に同意したことになります。
-        = f.submit '出品する', class: 'sell-body-exhibit__send'
-        = link_to "#" ,class: "sell-body-exhibit__exit" do
-          .sell-body-exhibit__exit-link
-            もどる
+  -#     .sell-body-price
+  -#       .sell-body-price-side
+  -#         .sell-body-price-side__title
+  -#           販売価格(300〜9,999,999)
+  -#           = fa_icon 'question-circle', class: "sell-body-price-side__question-circle"
+  -#       .sell-body-price-main
+  -#         .sell-body-price-main-input
+  -#           .sell-body-price-main-input__box
+  -#             .sell-body-price-main-input__box__name
+  -#               価格
+  -#             .sell-body-price-main-input__box__mark
+  -#               必須
+  -#             %input{class: "sell-body-price-main-input__box__yen", placeholder: "例)300"}
+  -#             .sell-body-price-main-input__box__yen-mark
+  -#               ￥
+  -#         .sell-body-price-main-commission
+  -#           .sell-body-price-main-commission__box
+  -#             .sell-body-price-main-commission__box__name
+  -#               販売手数料(10%)
+  -#             .sell-body-price-main-commission__box__ans
+  -#               ー
+  -#         .sell-body-price-main-profit
+  -#           .sell-body-price-main-profit__box
+  -#             .sell-body-price-main-profit__box__name
+  -#               販売利益
+  -#             .sell-body-price-main-profit__box__ans
+  -#               ー
+  -#     .sell-body-exhibit
+  -#       %p.sell-body-exhibit__caution
+  -#         #{link_to "禁止されている出品", "#",class: "sell-body-exhibit__caution-link"}、#{link_to "行為", "#",class: "sell-body-exhibit__caution-link"}を必ずご確認ください。
+  -#       %p.sell-body-exhibit__caution
+  -#         またブランド品でシリアルナンバー等がある場合はご記載ください。#{link_to "偽ブランドの販売", "#",class: "sell-body-exhibit__caution-link"}
+  -#       %p.sell-body-exhibit__caution
+  -#         は犯罪であり処罰される可能性があります。
+  -#       %p.sell-body-exhibit__caution
+  -#         また、出品をもちまして#{link_to "加盟店規約", "#",class: "sell-body-exhibit__caution-link"}に同意したことになります。
+  -#       = f.submit '出品する', class: 'sell-body-exhibit__send'
+  -#       = link_to "#" ,class: "sell-body-exhibit__exit" do
+  -#         .sell-body-exhibit__exit-link
+  -#           もどる
 
   = render 'devise/registrations/footer'
